[package]
name = "los"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "los"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[package.metadata.bootimage]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
